<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/news_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:cropToPadding="true"
            android:background="@android:color/darker_gray"/>
            <ImageButton
                android:id="@+id/news_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

    </LinearLayout>
</LinearLayout>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_title_label" />

    <EditText
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_title_hint" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_details_label" />

    <Button
        android:id="@+id/news_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/news_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_solved_label" />

    <Button
        android:id="@+id/news_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_suspect_text"/>

    <Button
        android:id="@+id/news_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_report_text"/>

</LinearLayout>